fixed the footer going behind the table cell

--- a/nomad-front-end/src/components/Credits/Credits.module.css
+++ b/nomad-front-end/src/components/Credits/Credits.module.css
@@ -9,6 +9,7 @@
   font-weight: 600;
   position: fixed;
   bottom: 0;
+  z-index: 3;
   left: 0;
   width: 100%;
 }
